envoy/replace-nginx.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 85 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains:
                        - "localhost"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: targetCluster
                http_filters:
                  - name: envoy.router
  clusters:
    - name: targetCluster
      connect_timeout: 0.25s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      hosts:
        [
          { socket_address: { address: 192.168.0.101, port_value: 81 } },
          { socket_address: { address: 192.168.0.101, port_value: 82 } },
        ]

admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9090 }
